# UCPLogger

./: .env.example  .gitignore  Dockerfile  Pipfile  db_schema.sql  docker-compose.yml  pyproject.toml  settings.json  start.py
.github/workflows/: continuous-delivery.yml  repo-sync.yml
locale/es/LC_MESSAGES/: discord.mo  discord.po  discussion_formatters.mo  discussion_formatters.po  misc.mo  misc.po  rc_formatters.mo  rc_formatters.po  wiki.mo  wiki.po
src/: bot.py  database.py  discord.py  i18n.py  misc.py  queue_handler.py  wiki.py
src/formatters/: discussions.py  rc.py
