[tool.poetry]
name = "ucplogger"
version = "0.1.0"
description = "Logs MediaWiki and Fandom Discussions activity to Discord"
authors = ["Nozomi <13172293+TheNozomi@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.3"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"
nest-asyncio = "^1.4.3"
python-dotenv = "^0.15.0"
PyMySQL = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
