[tool.poetry]
name = "ucplogger"
version = "1.1.0"
description = "owo"
authors = ["Nozomi <13172293+TheNozomi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
lxml = "^4.6.3"
nest-asyncio = "^1.5.1"
irc = "^19.0.1"
beautifulsoup4 = "^4.9.3"
asyncpg = "^0.22.0"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
